--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <meta property="og:title" content="front end web development">
   <meta property="og:description" content="Your website description goes here.">
   <meta property="og:image" content="https://bit.ly/fcc-relaxing-cat">
+  <!-- apple ios -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+
   <!-- SEO END -->
 
   <!-- My Links MAIN -->
@@ -35,7 +38,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Rubik:wght@400;500;700&display=swap"
     rel="stylesheet" async>
-    
+
      <!-- SCHEMA MARKUP -->
   <script type="application/ld+json">
     {
