--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Font Awesome, Google Font -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" async>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" >
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Rubik:wght@400;500;700&display=swap"
-    rel="stylesheet" async>
+    rel="stylesheet" >
 
      <!-- SCHEMA MARKUP -->
   <script type="application/ld+json">
@@ -99,7 +99,7 @@
 
       <div class="summary_list">
         <div>
-          <li> <i class="fa fa-bolt"></i></i>
+          <li> <i class="fa fa-bolt"></i>
             </i> Reaction </li>
           <li> <span class="bold">80</span> <span class="light">/ 100</span> </li>
         </div>
