--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 
       <div class="summary_list">
         <div>
-          <li> <i class="fa fa-bolt"></i>
-            </i> Reaction </li>
+          <li> <i class="fa fa-bolt"></i> Reaction </li>
           <li> <span class="bold">80</span> <span class="light">/ 100</span> </li>
         </div>
 
@@ -130,9 +129,9 @@
 
   <footer>
     <div class="attribution">
-      <p> Challenge by <a class="frontend" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend
-          Mentor</a>. Coded by</p>
-      <p class="my_name"> <a href="#">Mohaymenul Islam</a>.</p>
+      <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by:
+      </p>
+      <a href="https://github.com/nayem567" target="_blank"><span>Mohaymenul Islam</span></a>
     </div>
   </footer>
 
