--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
   <link rel="stylesheet" href="style.css">
 
   <!-- Font Awesome, Google Font -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" >
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Rubik:wght@400;500;700&display=swap"
-    rel="stylesheet" >
+  <link rel="stylesheet" media="print" onload="this.onload=null;this.removeAttribute('media');"
+    href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500;700;800&family=Rubik:wght@400;500;700&display=swap">
 
      <!-- SCHEMA MARKUP -->
   <script type="application/ld+json">
@@ -98,25 +97,25 @@
       </div>
 
       <div class="summary_list">
-        <div>
+        <ul>
           <li> <i class="fa fa-bolt"></i> Reaction </li>
           <li> <span class="bold">80</span> <span class="light">/ 100</span> </li>
-        </div>
+        </ul>
 
-        <div>
+        <ul>
           <li> <i class="fa fa-brain"></i> Memory </li>
           <li> <span class="bold">92</span> <span class="light">/ 100</span> </li>
-        </div>
+        </ul>
 
-        <div>
+        <ul>
           <li> <i class="fa-regular fa-comment"></i> Verbal </li>
           <li> <span class="bold">61</span> <span class="light">/ 100</span> </li>
-        </div>
+        </ul>
 
-        <div>
+        <ul>
           <li> <i class="fa-regular fa-eye"></i> Visual </li>
           <li> <span class="bold">72</span> <span class="light">/ 100</span> </li>
-        </div>
+        </ul>
       </div>
 
       <div class="summary_footer">
